tests/gcc-torture/breakdown/success/20011128-1.c
#include "cerberus.h"
int 
main (void)
{
  char blah[33] = "01234567890123456789";
  exit (0);
}
