tests/gcc-torture/breakdown/fail/internal/921110-1.c
#include "cerberus.h"
typedef void (*frob)();
frob f[] = {abort};

int main(void)
{
  exit(0);
}
